--- a/FacebookUI/FacebookUI.csproj
+++ b/FacebookUI/FacebookUI.csproj
@@ -35,6 +35,9 @@
     <Reference Include="FacebookBackend">
       <HintPath>..\FacebookBackend\obj\Debug\FacebookBackend.dll</HintPath>
     </Reference>
+    <Reference Include="FbGraphApiWrapper">
+      <HintPath>..\FacebookBackend\lib\FbGraphApiWrapper.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
